objects/TW1_Condicoes_Especiais__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Bonus_Mult_Brinde__c</fullName>
        <label>Bônus Mult. Brinde</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Bonus_Mult_Cupom__c</fullName>
        <label>Bônus Mult. Cupom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Cartao__c</fullName>
        <label>Cartão</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Cartão Credito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                </value>
                <value>
                    <fullName>VISA PLATINUM</fullName>
                </value>
                <value>
                    <fullName>VISA INFINITE</fullName>
                </value>
                <value>
                    <fullName>CLUBE RDB</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão de Crédito</fullName>
                    <isActive>false</isActive>
                    <label>Cartão de Crédito</label>
                </value>
                <value>
                    <fullName>Cartão de Débito</fullName>
                    <isActive>false</isActive>
                    <label>Cartão de Débito</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Condições Especiais</relationshipLabel>
        <relationshipName>Condi_es_Especiais</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Condições Especiais</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Condições Especiais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condições Especiais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>